<?xml version="1.0"?>
<package format="2">
  <name>nanotec_ethercat_sdk</name>
  <version>1.0.0</version>
  <description>Nanotec Ethercat implementation.</description>
  
  <maintainer email="sneelaksh@ethz.ch">Neelaksh Singh</maintainer>
  <maintainer email="cehmke@ethz.ch">Claas Ehmke</maintainer>
  <license>BSD-3-Clause</license>
  <author email="sneelaksh@ethz.ch">Neelaksh Singh</author>
  <author email="cehmke@ethz.ch">Claas Ehmke</author>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_logger</depend>
  <depend>ethercat_motor_msgs</depend>
  <depend>soem_interface</depend>
  <depend>yaml-cpp</depend>
  <depend>ethercat_sdk_master</depend>
  
</package>
